[package]
name = "born-ed-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
gloo-timers    = "0.2"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = [
    "MediaStream",            # to get the MediaStream type
    "MediaRecorder",          # to get the MediaRecorder type
    "MediaRecorderOptions",   # if you want to pass options
    "console",                # optional, for web_sys::console::log_1
    "Window",                 # if you need window().navigator().media_devices()
    "Navigator",
    "MediaDevices",
    "BlobEvent",
    "MediaStreamConstraints",
    "HtmlVideoElement",
    "SpeechRecognition",
    "SpeechRecognitionEvent",
     "SpeechRecognitionResultList",  # the results list type
    "SpeechRecognitionResult",      # each individual result
    "SpeechRecognitionAlternative",
] }
gloo = "0.11.0"

[workspace]
members = ["src-tauri"]
